<resources>
    <string name="app_name">ReachYourFitnessGoals</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="step_continue">ต่อไป</string>
    <string name="step_finish">เสร็จสิ้น</string>
    <string name="step_cancel">ยกเลิก</string>
    <string name="step_confirm">ยืนยัน</string>

    <!-- sharedPreferences -->
    <string name="sharedPreferencesName">PREFS</string>
    <string name="sharedBoolFirstTimeOfWeek">checkFirstTimeOfWeek</string>
    <string name="sharedBoolDayHighLight">day</string>
    <string name="sharedBoolSetExe">checkSetExe</string>
    <string name="sharedBoolLogIn">checkLogIn</string>
    <string name="sharedStringMemberId">memberId</string>

    <!-- SetExerciseInWeekActivity -->
    <string name="steps_titles1">เลือกจำนวนวัน</string>
    <string name="steps_titles2">เลือกวัน</string>
    <string name="totalDay">จำนวนวันที่ต้องเลือก: </string>
    <string name="alertText">โปรดเลือกจำนวนวันให้ตรงกัน</string>
    <string name="cancelSetExeText">โปรดกลับมาใหม่ในวันจันทร์</string>

    <!-- fragment_calendar -->
    <string name="selectExerciseOfDay_text">ท่าออกกำลังกายประจำวัน</string>
    <string name="selectExerciseOfDay_buttonText">เลือกท่าออกกำลังกายประจำวัน</string>
    <string name="note_text">ความรู้สึก</string>

    <!-- dialog_setExercise_inDay -->
    <string name="customSelect">เลือกท่าเอง</string>
    <string name="autoSelect">เลือกท่าอัตโนมัติ</string>

    <!-- fragment_selectGoal -->
    <string name="goalText">เลือกเป้าหมาย</string>
    <string name="expandDetail">เลือกเป้าหมายที่คุณสนใจและทำให้สำเร็จไปกับเรา</string>
    <string name="loseWeightGoal">ลดนํ้าหนัก</string>
    <string name="muscleBuilding">เสริมสร้างกล้ามเนื้อ</string>


    <string-array name="type_exe">
        <item>Stretching</item>
        <item>Warm Up</item>
        <item>Strength</item>
        <item>Cardio</item>
        <item>Cool Down</item>
    </string-array>

    <!-- fragment_ParQ_form -->
    <string name="parQ_head">PAR-Q FORM</string>
    <string name="parQ_meaning">แบบประเมินความพร้อมก่อนออกกำลังกาย (Physical Activity Readiness Questionaire หรือ PAR - Q) เป็นแบบสอบถามเกี่ยวกับความพร้อมก่อนออกกลังกายการออกกาลังกายจาก Canadian Society for Exercise Physiology</string>
    <string-array name="parQ">
        <item>แพทย์ที่ตรวจรักษาเคยบอกหรือไม่ว่า ท่านมีความผิดปรกติของหัวใจ และควรออกกำลังกายภายใต้คำแนะนำของแพทย์เท่านั้น</item>
        <item>ท่านมีความรู้สึกเจ็บปวดหรือแน่นบริเวณหน้าอก ขณะที่ออกกำลังกายหรือไม่</item>
        <item>ในเดือนที่ผ่านมา ท่านมีอาการเจ็บหน้าอก ขณะที่อยู่เฉยๆโดยไม่ได้ออกกำลังกายหรือไม่</item>
        <item>ท่านมีอาการสูญเสียการทรงตัว (ยืนหรือเดินเซ) เนื่องจากอาการวิงเวียนศีรษะหรือไม่  หรือท่านเคยเป็นลมหมดสิตหรือไม่</item>
        <item>ท่านมีปัญหากระดูกหรือข้อต่อ  ซึ่งจะมีอาการแย่ลง ถ้าออกกำลังกายหรือไม่</item>
        <item>แพทย์ที่ตรวจรักษามีการสั่งยารักษาความดันโลหิต หรือความผิดปรกติของหัวใจให้ท่านหรือไม่</item>
        <item>เท่าที่ท่านทราบ ยังมีเหตุผลอื่นๆอีกหรือไม่ ที่ทำให้ท่านสามารถออกกำลังกายได้</item>
    </string-array>

    <!-- fragment_results_ParQ -->
    <string name="annotation"> หมายเหตุ  อาการที่ควรหยุดพัก หรือเลื่อนการออกกำลังกายอย่างกระฉับกระเฉงไปก่อน</string>
    <string name="annotation1">(1) รู้สึกไมค่อย่สบาย ครั่นเนื้อครั่นตัว เช่นเป็นหวัดหรือมีไข้ ควรหยุดพักผ่อนจนรู้สึกดีขึ้น </string>
    <string name="annotation2">(2) ถ้าท่า่นตั้งครรภ์หรืออาจจะตั้งครรภ์ โปรดปรึกษาแพทย์ก่อนที่จะออกกำลังกาย</string>
    <string-array name="results">
        <item>ผลสรุปแบบประเมิน ท่านสามารถออกกำลังกายได้ โดยเริ่มต้นทำอย่างช้าๆและค่อยๆเพิ่มเวลาหรือความหนักขึ้นเพื่อความปลอดภัย</item>
        <item>ผลสรุปแบบประเมิน ท่านควรปรึกษาแพทย์ก่่อนออกกำลังกายเนื่องจากมีความเสี่ยง</item>
    </string-array>

    <!-- fragment_customExe_list -->
    <string name="totalCalorie">จำนวนแคลอรี่ทั้งหมด</string>

    <string name="textUnderLineSignUp"><u>สมัครสมาชิก</u></string>
    <string name="textUnderLine"><u>เข้าสู่ระบบที่นี่</u></string>
    <string name="textUnderLineForgetPass"><u>ลืมรหัสผ่าน?</u></string>


    <string-array name="json_key">
        <item>vdo</item>
        <item>personal</item>
        <item>program</item>
        <item>exercise</item>
    </string-array>

</resources>
