<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault_Background"
    tools:context="com.finalproject.reachyourfitnessgoals.fragment.fragment_results_parQ"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                style="@style/text_header"
                android:textStyle="bold"
                android:id="@+id/result_TextView_resultParQ" />

            <TextView
                style="@style/text_default"
                android:text="@string/annotation" />
            <TextView
                style="@style/text_default"
                android:text="@string/annotation1" />
            <TextView
                style="@style/text_default"
                android:text="@string/annotation2" />

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ข้าพเจ้าได้อ่านและยอมรับ"
            android:textSize="@dimen/default_text"
            android:id="@+id/check_CheckBox_parQ"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ยกเลิก"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ตกลง"
            android:id="@+id/confirm_Button_resultParQ"/>
    </LinearLayout>


</LinearLayout>
